fix(QStepper): wrong alignment for header nav with only one step #9192

--- a/ui/src/components/stepper/QStepper.sass
+++ b/ui/src/components/stepper/QStepper.sass
@@ -72,6 +72,8 @@
           justify-content: flex-start
         &:last-child
           justify-content: flex-end
+        &:only-child
+          justify-content: center
       .q-stepper__dot:after
         display: none
     &--alternative-labels
